--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
     "symfony/debug-bundle": "^7.3",
     "symfony/web-profiler-bundle": "^7.3",
     "symfony/maker-bundle": "^1.63",
-    "nunomaduro/collision": "^8.8"
+    "nunomaduro/collision": "^8.8",
+    "doctrine/doctrine-fixtures-bundle": "^4.1"
   }
 }
