--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,39 +1,48 @@
+# config/packages/security.yaml
 security:
-    # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
-        Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
-    # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
+        Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: auto
+
     providers:
-        users_in_memory: { memory: null }
+        app_user_provider:
+            entity:
+                class: App\Entity\User
+                property: email           # ← c’est bien le champ « email » de ton entité
+
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
-        main:
+
+        admin:
+            pattern: ^/admin
+            provider: app_user_provider
             lazy: true
-            provider: users_in_memory
 
-            # activate different ways to authenticate
-            # https://symfony.com/doc/current/security.html#the-firewall
+            form_login:
+                login_path:  app_login     # GET  /admin/login  → affiche le formulaire
+                check_path:  app_login     # POST /admin/login  → traite la soumission
+                default_target_path: admin # vers /admin après connexion
 
-            # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
+                # ★ on fait correspondre exactement les names du <form> ★
+                username_parameter: _username
+                password_parameter: _password
+                csrf_parameter:    _csrf_token
+                enable_csrf:       true
 
-    # Easy way to control access for large sections of your site
-    # Note: Only the *first* access control that matches will be used
+            logout:
+                path:   app_logout
+                target: app_login
+
+            remember_me:
+                secret:   '%kernel.secret%'
+                lifetime: 604800  # 7 jours
+                path:     /
+
+        main:          # le reste du site n’est pas protégé
+            pattern: ^/
+            security: false
+
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
-
-when@test:
-    security:
-        password_hashers:
-            # By default, password hashers are resource intensive and take time. This is
-            # important to generate secure password hashes. In tests however, secure hashes
-            # are not important, waste resources and increase test times. The following
-            # reduces the work factor to the lowest possible values.
-            Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface:
-                algorithm: auto
-                cost: 4 # Lowest possible value for bcrypt
-                time_cost: 3 # Lowest possible value for argon
-                memory_cost: 10 # Lowest possible value for argon
+        - { path: ^/admin/login$, roles: PUBLIC_ACCESS }
+        - { path: ^/admin,         roles: ROLE_ADMIN }
