--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
     "symfony/notifier": "^7.3",
     "symfony/dotenv": "^7.3",
     "easycorp/easyadmin-bundle": "^4.24",
-    "vich/uploader-bundle": "^2.7"
+    "vich/uploader-bundle": "^2.7",
+    "doctrine/doctrine-bundle": "^2.15"
   },
   "config": {
     "allow-plugins": {
