--- a/.env
+++ b/.env
@@ -23,7 +23,7 @@ APP_SECRET=9fbaff55a0e90befd57a86584ea63134
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
-# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data_%kernel.environment%.db"
+DATABASE_URL="sqlite:///%kernel.project_dir%/var/data_%kernel.environment%.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
 # .env
 # DATABASE_URL="mysql://root:@127.0.0.1:3306/GoldenGoat?serverVersion=8.0"
