--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
     "symfony/dotenv": "^7.3",
     "easycorp/easyadmin-bundle": "^4.24",
     "vich/uploader-bundle": "^2.7",
-    "doctrine/doctrine-bundle": "^2.15"
+    "doctrine/doctrine-bundle": "^2.15",
+    "symfony/ux-twig-component": "^2.26"
   },
   "config": {
     "allow-plugins": {
